--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,10 +1,21 @@
-<mvc:View controllerName="sap.ui.odataapp.controller.App" 
-		  xmlns="sap.m" 
-		  xmlns:mvc="sap.ui.core.mvc">
-	<Button text="{i18n>showHelloButtonText}"
-    		press="onShowHello"/>
-	<Input	value="{/recipient/name}"
-    		description="Hello {/recipient/name}"
-    		valueLiveUpdate="true"
-        	width="60%"/>    		
+<mvc:View controllerName="sap.ui.odataapp.controller.App" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" displayBlock="true">
+	<App class="myAppDemoWT">
+		<pages>
+			<Page title="{i18n>homePageTitle}">
+				<content>
+					<Panel headerText="{i18n>helloPanelTitle}" 
+						   class="sapUiResponsiveMargin"
+						   width="auto">
+						<content>
+							<Button text="{i18n>showHelloButtonText}" press="onShowHello" class="myCustomButton"/>
+							<Input value="{/recipient/name}" valueLiveUpdate="true" width="60%"/>
+							<Text
+								text="Hello {/recipient/name}"
+								class ="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>
+						</content>
+					</Panel>
+				</content>
+			</Page>
+		</pages>
+	</App>
 </mvc:View>
