--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -10,7 +10,7 @@
 							<Button text="{i18n>showHelloButtonText}" press="onShowHello" class="myCustomButton"/>
 							<Input value="{/recipient/name}" valueLiveUpdate="true" width="60%"/>
 							<Text
-								text="Hello {/recipient/name}"
+								text="Hi {/recipient/name}"
 								class ="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>
 						</content>
 					</Panel>
