--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -14,37 +14,31 @@
 						   class="sapUiResponsiveMargin"
 						   width="auto">
 						<content>
-							<t:Table rows="{
-										   path: '/Products'
-										   }"
-									 >
-								<t:columns>
-									<t:Column>
-										<Label text="{i18n>ColumnID}"/>
-										<t:template>
-											<Text text="{Id}"/>
-										</t:template>
-									</t:Column>
-									<t:Column>
-										<Label text="{i18n>Name}"/>
-										<t:template>
-											<Text text="{Name}"/>
-										</t:template>
-									</t:Column>
-									<t:Column>
-										<Label text="{i18n>Price}"/>
-										<t:template>
-											<Text text="{Price}"/>
-										</t:template>
-									</t:Column>
-									<t:Column name="Category">
-										<Label text="{i18n>Category}"/>
-										<t:template>
-											<Text text="{Category}"/>
-										</t:template>
-									</t:Column>
-								</t:columns>
-							</t:Table>
+							<List
+									id="invoiceList"
+									class="sapUiResponsiveMargin"
+									width="auto"
+									items="{
+									 path: '/Products',
+									 sorter:	{
+									    		path: 'Category',
+									    		descending: true,
+									    		group: true
+												}
+									}" >
+								<headerToolbar>
+									<Toolbar>
+										<Title text="{i18n>tableName}"/>
+									</Toolbar>
+								</headerToolbar>
+								
+								<items>
+									<StandardListItem
+										title="{Name}"
+										description="{i18n>columnID}: {Id}"
+										info="{Price} EUR"/>									
+								</items>
+							</List>
 						</content>
 					</Panel>
 				</content>
